Add fontawesome as webfont and css

--- a/app/global.css
+++ b/app/global.css
@@ -16,3 +16,14 @@ input[type='number']::-webkit-outer-spin-button {
   -webkit-appearance: none;
   margin: 0;
 }
+
+.icon::before {
+  display: inline-block;
+  text-rendering: auto;
+  -webkit-font-smoothing: antialiased;
+}
+
+.git::before {
+  font: var(--fa-font-brands);
+  content: "\f09b";
+}
